--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -40,5 +40,8 @@ go_test(
     name = "go_default_test",
     srcs = ["config_test.go"],
     embed = [":go_default_library"],
-    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
+    deps = [
+        "//genproto/build/bazel/remote/execution/v2:go_default_library",
+        "@com_github_google_go_cmp//cmp:go_default_library",
+    ],
 )
